--- a/package.json
+++ b/package.json
@@ -1,57 +1,28 @@
 {
-  "name": "gun",
-  "version": "0.2020.1239",
-  "description": "A realtime, decentralized, offline-first, graph data synchronization engine.",
-  "types": "index.d.ts",
+  "name": "gitchain-db",
+  "version": "1.0.6",
+  "description": "",
   "main": "index.js",
-  "browser": "browser.js",
-  "ios": "browser.ios.js",
-  "android": "browser.android.js",
   "scripts": {
     "start": "node --prof examples/http.js",
     "debug": "node --prof-process --preprocess -j isolate*.log > v8data.json && rm isolate*.log && echo 'drag & drop ./v8data.json into https://mapbox.github.io/flamebearer/'",
     "https": "HTTPS_KEY=test/https/server.key HTTPS_CERT=test/https/server.crt npm start",
     "prepublishOnly": "npm run unbuild",
     "test": "echo 'Did you run PANIC holy-grail, 1~X, on-recover, etc.?' && mocha",
-    "testsea": "mocha test/sea/sea.js",
     "e2e": "mocha e2e/distributed.js",
     "docker": "hooks/build",
-    "minify": "uglifyjs gun.js -o gun.min.js -c -m",
+    "minify": "node scripts/minify.mjs",
     "unbuild": "node lib/unbuild.js & npm run minify",
-    "unbuildSea": "node lib/unbuild.js sea",
+    "unbuildEncryption": "node lib/unbuild.js encryption",
     "unbuildMeta": "node lib/unbuild.js lib/meta"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/amark/gun.git"
+    "url": "git+https://github.com/git-chain/database.git"
   },
-  "keywords": [
-    "gun",
-    "gunDB",
-    "graph",
-    "document",
-    "key",
-    "value",
-    "relational",
-    "datastore",
-    "database",
-    "engine",
-    "realtime",
-    "decentralized",
-    "peer-to-peer",
-    "distributed",
-    "P2P",
-    "OSS",
-    "embedded",
-    "localstorage",
-    "S3"
-  ],
-  "author": "Mark Nadal",
-  "license": "(Zlib OR MIT OR Apache-2.0)",
-  "bugs": {
-    "url": "https://github.com/amark/gun/issues"
-  },
-  "homepage": "https://github.com/amark/gun#readme",
+  "keywords": ["database", "p2p", "decentralized", "distributed", "realtime"],
+  "author": "",
+  "license": "MIT",
   "engines": {
     "node": ">=0.8.4"
   },
